[tool.poetry]
name = "visual_arts"
version = "0.1.0"
description = ""
authors = ["hissanova"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
ipython = "^8.21.0"
mypy = "^1.8.0"
jedi = "^0.19.1"
flake8 = "^7.0.0"
yapf = "^0.40.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
